# stock_analysis_framework

./: .codebuddyrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  TRACEABILITY.md  backtest_report.html  prototype.html  pyproject.toml  report_600519_SH.html  test_output.txt
.codebuddy/memory/: 2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-07.md  2026-06-08.md  MEMORY.md
.codebuddy/plans/: stock-analysis-framework-implementation_b759ebac.md  stock-analysis-framework-implementation_d845c6d2.md  stock-analysis-framework_08b3cb5a.md  stock-analysis-framework_0ce17be3.md  stock-analysis-framework_509ddfd7.md  stock-analysis-framework_a9410dad.md
.github/workflows/: ci.yaml
docs/: dashboard.html  plan.md
examples/: quick_start.py  run_backtest.py
rules/: agent_constraints.yaml  cv_methodology_brief.md  l2_screener_rules.yaml  turtle_constants.yaml
scripts/: build_test_fixtures.py  run_screener.py  verify_traceability.py
src/: __init__.py  cli.py
src/agents/: __init__.py  checkpoint.py  context.py  coordinator.py
src/backtest/: __init__.py  dividend_validator.py  report.py  (+3 more)
temp/: calc_disposable.py  calc_pr_v021.py  check_cninfo_url.py  check_tushare_fields.py  debug_cninfo.py  debug_cninfo_sz.py  debug_cninfo_sz2.py  debug_cninfo_sz3.py  debug_pr.py  dl_2025.py  extract_restricted_cash.py  extract_tfa.py  gree_run.txt  maotai_run.txt  moutiao_output.txt  test_akshare.py  test_akshare2.py
tests/: conftest.py
(+144 files in other folders)
