[tool.poetry]
name = "stock-analysis-framework"
version = "0.23.0"
description = "龟龟投资策略框架 v0.23 — A股选股到报告生成全管线"
authors = ["harry <harry@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]
python = ">=3.9,<3.13"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = ">=2.0"
pandas = ">=2.0"
numpy = ">=1.24"
pyyaml = ">=6.0"
python-dotenv = ">=1.0"
pydantic-settings = ">=2.0"
loguru = ">=0.7"
tenacity = ">=8.0"
tushare = ">=1.4"
jinja2 = ">=3.1"
matplotlib = ">=3.7"
plotly = ">=5.14"
openai = ">=1.0"
anthropic = ">=0.20"
pyarrow = ">=14.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
ruff = ">=0.1"
mypy = ">=1.5"
pre-commit = ">=3.5"
jupyter = ">=1.0"
openpyxl = ">=3.1"

[tool.poetry.scripts]
stock-analyze = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
